# app/Models/Avis.php
@@ -1,0 +1,27 @@
+<?php
+
+namespace App\Models;
+
+use Illuminate\Database\Eloquent\Model;
+
+class Avis extends Model
+{
+    protected $fillable = [
+        'client_id', 'produit_id', 'note', 'commentaire', 'date_publication'
+    ];
+
+    protected $casts = [
+        'note'             => 'integer',
+        'date_publication' => 'datetime',
+    ];
+
+    public function client()
+    {
+        return $this->belongsTo(User::class, 'client_id');
+    }
+
+    public function produit()
+    {
+        return $this->belongsTo(Produit::class, 'produit_id');
+    }
+}
